fix: navigation bar on mobile

--- a/components/ui/navigation-bar/NavigationBar.scss
+++ b/components/ui/navigation-bar/NavigationBar.scss
@@ -99,7 +99,7 @@
           transition: all 0.5s ease-in-out;
           .nav-link {
             &.router-link-active {
-              border-bottom: unset;
+              border-bottom: unset !important;
             }
           }
         }
