--- a/styles/scss/_card.scss
+++ b/styles/scss/_card.scss
@@ -23,3 +23,9 @@
     transition: all 0.5s $transition-1;
   }
 }
+
+@media only screen and (max-width: 768px) {
+  .product-card {
+    border: 1px solid var(--gray-15) !important;
+  }
+}
